--- a/experience.html
+++ b/experience.html
@@ -24,16 +24,11 @@
         <h2>Experience</h2>
         <div class="job">
             <h3>Incoming Software Engineering Intern</h3>
-            <p><strong>Atlassian</strong> | Berkeley, CA (May 2025 – Aug. 2025)</p>
-            <ul>
-                <li>Developed a keyword-based semantic search system using NLP techniques.</li>
-                <li>Utilized GraphQL APIs to benchmark and optimize data embeddings.</li>
-                <li>Created client-side filters for categorical course attributes.</li>
-            </ul>
+            <p><strong>Atlassian</strong> | San Francisco, CA (May 2025 – Aug. 2025)</p>
         </div>
         <div class="job">
             <h3>Backend Software Engineer</h3>
-            <p><strong>Berkeleytime.com</strong> | San Francisco, CA (Aug. 2024 – Present)</p>
+            <p><strong>Berkeleytime.com</strong> | Berkeley, CA (Aug. 2024 – Present)</p>
             <ul>
                 <li>Developed a keyword-based semantic search system using NLP techniques.</li>
                 <li>Utilized GraphQL APIs to benchmark and optimize data embeddings.</li>
